Source/bmalloc/bmalloc/VMHeap.h
@@ -26,7 +26,6 @@
 #ifndef VMHeap_h
 #define VMHeap_h
 
-#include "AsyncTask.h"
 #include "Chunk.h"
 #include "FixedVector.h"
 #include "Map.h"
